--- a/contact.css
+++ b/contact.css
@@ -119,3 +119,19 @@ main .form-header button {
   border: none;
   text-decoration: underline;
 }
+
+@media (max-width: 768px) {
+  main {
+    padding: 1rem 0rem 0rem 0rem;
+  }
+
+  main .fee-calc {
+    width: 90%;
+    padding: 0rem;
+    flex-direction: column;
+  }
+
+  main .fee-calc .output {
+    border-radius: 20px 20px 0px 0px;
+  }
+}
