--- a/courses.css
+++ b/courses.css
@@ -112,3 +112,20 @@ main .fee-calc {
 main {
   padding-bottom: 2rem;
 }
+
+@media (max-width: 768px) {
+  main {
+
+    padding: 1rem 0rem 0rem 0rem;
+  }
+
+  main .fee-calc {
+    width: 90%;
+    padding: 0rem;
+    flex-direction: column;
+  }
+
+  main .fee-calc .output {
+    border-radius: 20px 20px 0px 0px;
+  }
+}
